workflow-guides/smcn/hybrid-genai-appconnect-waf/assets/eks-llm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: llm
---
apiVersion: v1
kind: Service
metadata:
  name: llama
  labels:
    app: llama
  namespace: llm
spec:
  type: ClusterIP
  ports:
  - port: 8000
  selector:
    app: llama

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama
  namespace: llm
spec:
  selector:
    matchLabels:
      app: llama
  replicas: 1
  template:
    metadata:
      labels:
        app: llama
    spec:
      containers:
      - name: llama
        image: registry.gitlab.com/f5-public/llama-cpp-python:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llama
  namespace: llm
  annotations:
    appprotect.f5.com/app-protect-policy: "llm/llama"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "llm/logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=10.0.134.70:5261"
    appprotectdos.f5.com/app-protect-dos-resource: "llm/dos-protected"
    nginx.org/proxy-read-timeout: "3600"
    nginx.org/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: llama
      port:
        number: 8000
  rules:
  - host: "*.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: llama
            port:
              number: 8000
